--- a/corelib/webApp/WebApp/WebApp/Views/Account/Login.cshtml
+++ b/corelib/webApp/WebApp/WebApp/Views/Account/Login.cshtml
@@ -13,7 +13,7 @@
 <div class="wrapper-page">
 
     <div class="text-center">
-        <a href="index.html" class="logo logo-lg"><i class="fa fa-bars"></i> <span>Company Vehicle</span> </a>
+        <a href="index.html" class="logo logo-lg"><i class="fa fa-bars"></i> <span>Online FASTrax</span> </a>
     </div>
 
     <form class="form-horizontal m-t-20" action="/Account/Login?" method="post" novalidate="novalidate">
