--- a/corelib/webApp/WebApp/WebApp/Views/Shared/_Default.cshtml
+++ b/corelib/webApp/WebApp/WebApp/Views/Shared/_Default.cshtml
@@ -69,18 +69,17 @@
         <div class="container">
 
             <!-- Page-Title -->
-            <div class="row">
+            <div class="row" style="width: 30%;margin: 0 auto;">
                 <div class="col-sm-12">
 
                     <!-- =======================
-                         ===== START PAGE ======
-                         ======================= -->
-
+                 ===== START PAGE ======
+                 ======================= -->
                     @RenderBody()
 
                     <!-- =======================
-                     ===== END PAGE ======
-                     ======================= -->
+             ===== END PAGE ======
+             ======================= -->
 
                 </div>
             </div>
