--- a/corelib/webApp/WebApp/WebApp/Views/Home/DefaultViewport.cshtml
+++ b/corelib/webApp/WebApp/WebApp/Views/Home/DefaultViewport.cshtml
@@ -1,6 +1,37 @@
 ﻿@{
+    
     Layout = "~/Views/Shared/_Default.cshtml";
+    
 }
 
-<h2>DefaultViewport</h2>
+<div class="row">
+    <div class="col-md-12 col-lg-12">
+        <div class="card-box">
+            <div class="row">
 
+                <div class="col-md-12">
+                    <h4 class="m-t-0 header-title"><b>Projects</b></h4>
+                    <p class="text-muted m-b-30 font-13">
+                        List of accessible projects
+                    </p>
+
+                    <div class="list-group">
+                        @{
+                            if (ViewBag.Modules != null)
+                            {
+                                foreach (var ModuleName in ViewBag.Modules)
+                                {
+                                    <a href="/Home/Index?active_project=@ModuleName.ToString().Trim()" class="list-group-item">@ModuleName.ToString().Trim()</a>
+                                }
+                            }
+                        }
+                    </div> <!-- list-group -->
+
+                </div>
+                <!-- end col -->
+
+            </div>
+            <!-- end row -->
+        </div> <!-- end card-box -->
+    </div> <!-- end col -->
+</div>
