--- a/corelib/webApp/WebApp/WebApp/Views/Shared/404Page.cshtml
+++ b/corelib/webApp/WebApp/WebApp/Views/Shared/404Page.cshtml
@@ -7,9 +7,10 @@
 
     <meta name="description" content="Fleet Management">
     <meta name="author" content="Automotive Management Services">
+
     <link rel="shortcut icon" href="../../Content/theme/images/favicon.ico" type="image/x-icon">
 
-    <title>AMS - Company Vehicle</title>
+    <title>404 - Online FASTrax</title>
 
     <link href="../../Content/theme/css/bootstrap.min.css" rel="stylesheet" />
     <link href="../../Content/theme/css/core.css" rel="stylesheet" />
@@ -19,22 +20,10 @@
     <link href="../../Content/theme/css/menu.css" rel="stylesheet" />
     <link href="../../Content/theme/css/responsive.css" rel="stylesheet" />
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-    <![endif]-->
-
-
 </head>
 <body>
-    
-    @RenderBody()
 
-    <script>
-        var resizefunc = [];
-    </script>
+    @RenderBody()
 
     <script src="../../Content/theme/js/jquery.min.js"></script>
     <script src="../../Content/theme/js/bootstrap.min.js"></script>
@@ -49,12 +38,6 @@
 
     <script src="../../Content/theme/js/jquery.core.js"></script>
     <script src="../../Content/theme/js/jquery.app.js"></script>
-
-    @* parsley form validation *@
-    <script src="../../Content/theme/js/parsley.min.js"></script>
-
-    @RenderSection("scripts", required: false)
-
 
 </body>
 </html>
