--- a/corelib/webApp/WebApp/WebApp/Views/Shared/_Layout.cshtml
+++ b/corelib/webApp/WebApp/WebApp/Views/Shared/_Layout.cshtml
@@ -45,6 +45,7 @@
             <div class="container">
 
                 <!-- Logo container-->
+
                 <div class="logo">
                     <a href="./" class="logo"><i class="md md-equalizer"></i> <span>Online FASTrax</span> </a>
                 </div>
@@ -163,6 +164,10 @@
                 <div id="navigation">
                     <!-- Navigation Menu-->
                     <ul class="navigation-menu">
+
+                        <li class="has-submenu">
+                            <a href="/Home/DefaultViewport"><i class="md md-home"></i></a>
+                        </li>
 
                         <li class="has-submenu active">
                             <a href="/Home"><i class="md md-dashboard"></i>Dashboard</a>
